fixes #75 -- se muestran 70 noticas en columnas y pendientes. Además se agraga jscrollpane, una scrollbar customizable

--- a/app/webroot/css/columns.css
+++ b/app/webroot/css/columns.css
@@ -134,10 +134,11 @@ div#pendings div#rows{
 	border-right-style: solid;
 	border-right-width: 1px;
 	border-right-color: rgb(222,222,221);
-	min-height: 750px;
+	max-height: 750px;
 	width: 100%;
 	float: left;
 	position: relative;
+	overflow-y: scroll;
 	
 }
 div#pendings div#rows div.newsRows{
